src/snapshots/afrotd__parser__tests__interpretation_8.3.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 4
index: 2
text: "B1 fängt Team A’s legalen Vorwärtspass ab und trägt ihn zur\nSpielfeldmitte. Während des Laufes nach dem abgefangenen Pass clippt\nB2 in Team B’s Endzone."
ruling: "Die Strafe wird durch die Regel\naufgehoben."
