src/snapshots/afrotd__parser__tests__interpretation_8.3.4_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 4
index: 3
text: "Während eines Zwei-Punkte-Try verursacht Team A einen illegalen Shift. B21 recovert einen Fumble und bei dem Return clippt B45,\nwährend A80 einen Gegner schlägt. B21 advanct den Ball über A’s\nGoalline."
ruling: "Die Punkte zählen nicht, die Strafen gleichen sich\naus, der Down wird nicht wiederholt und der Try ist vorbei. A80’s Foul\n(Schlägerei) wird beim anschließenden Kickoff oder vom Succeeding\nSpot in Extraperioden geahndet. A80 wird disqualifiziert."
