src/snapshots/afrotd__parser__tests__interpretation_8.3.4_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 4
index: 4
text: "Während eines Zwei-Punkte-Try verursacht Team A einen illegalen Shift. B21 recovert einen Fumble und bei dem Return schlägt\nA80 einen Gegner. B21 advanct den Ball über A’s Goalline."
ruling: "Die Punkte zählen und die Strafe für A80’s schweres Foul wird beim\nanschließenden Kickoff oder dem Succeeding Spot in Extraperioden\ndurchgeführt. A80 wird disqualifiziert."
