src/snapshots/afrotd__parser__tests__interpretation_8.4.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 4
  - 2
index: 4
text: "4. und 8 von der B-18. Der erfolglose Fieldgoalversuch geht\ndurch die Endzone ins Aus."
ruling: Team B’s Ball an der B-20.
