src/snapshots/afrotd__parser__tests__interpretation_8.4.2_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 4
  - 2
index: 5
text: "Team A’s erfolgloser Fieldgoalversuch berührt den Boden jenseits der neutralen Zone und prallt zurück hinter die neutrale Zone, wo\nder Ball von B1 recovert und in die Endzone advanct wird."
ruling: Touchdown (Regel 6.3.5).
