src/snapshots/afrotd__parser__tests__interpretation_8.4.2_8.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 4
  - 2
index: 8
text: "4. und Goal von der B-10. Beim Fieldgoalversuch wird der Ball\ngeblockt und prallt an der B-7 auf den Boden. Er springt danach zurück\nbis an die B-13, wo B44 ihn mufft. A44 recovert den Ball an der B11."
ruling: "A’s Ball, 1. und 10 von der B-11. Team B hat einen\nScrimmage Kick berührt, der die neutrale Zone überquert hatte (Regel\n6.3.3)."
